Makefile and stuff
--HG--
branch : 13

--- a/sample-template.html
+++ b/sample-template.html
@@ -33,8 +33,8 @@
 		      width="{WIDTH}" height="{HEIGHT}" > 
 						<param name="type" value="application/x-java-applet;version=1.4" />
 		
-						<param name="java_archive" value="{LIBS}" />
-						<param name="java_code" value="hsplet.Applet.class" />
+						<param name="archive" value="{LIBS}" />
+						<param name="code" value="hsplet.Applet.class" />
 						<param name="startClass" value="{START_CLASS_NAME}" />
 						
 						<p><a href="http://www.java.com/ja/" target="_blank">Java</a> Plugin 1.4.2 or later is not installed.
